--- a/public/admin-manifest.json
+++ b/public/admin-manifest.json
@@ -7,6 +7,7 @@
   "background_color": "#0f172a",
   "theme_color": "#1e293b",
   "orientation": "portrait",
+  "gcm_sender_id": "103953800507",
   "icons": [
     {
       "src": "/icons/icon-72x72.png",
