--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,7 @@
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "orientation": "portrait",
+  "gcm_sender_id": "103953800507",
   "icons": [
     {
       "src": "/icons/icon-72x72.png",
