Critical fix for background push notifications v5
CRITICAL FIXES:
- Add TTL (24 hours) to push messages - ensures message persists if device offline
- Add urgency: 'high' header - REQUIRED for waking device from sleep
- Add topic for message deduplication
- Add pushsubscriptionchange event handler for subscription renewal
- Add permissions to manifest.json and admin-manifest.json
- Upgrade service worker to v5 with version logging
- Add detailed logging at service worker load time

These options are REQUIRED by FCM/Chrome for background notification delivery

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -82,5 +82,7 @@
       "url": "/admin",
       "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
     }
-  ]
+  ],
+  "permissions": ["notifications", "push"],
+  "prefer_related_applications": false
 }
