--- a/public/admin-manifest.json
+++ b/public/admin-manifest.json
@@ -81,5 +81,7 @@
       "url": "/admin",
       "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
     }
-  ]
+  ],
+  "permissions": ["notifications", "push"],
+  "prefer_related_applications": false
 }
