fix: Separate build configs for web vs Capacitor
- Web builds now use normal Next.js (with API routes)
- Capacitor builds use static export (for APK)
- Added build:capacitor script for APK builds
- Fixed production API routes not working
- Added PowerShell script for Windows Capacitor builds

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:capacitor": "powershell -ExecutionPolicy Bypass -File ./build-capacitor.ps1",
     "start": "next start",
     "lint": "next lint"
   },
